# danalyze

./: .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  danalyze.py  pyproject.toml
.github/workflows/: debian.yml  python-linux.yml  ubuntu.yml
src/danalyze/: danalyze.py
test/: test_lib.py  testfiles.txz
test/1/: deadlink  different.txt  goodlink  only_1.txt  same.txt
test/2/: cicero.txt  different.txt  file.txt  only_2.txt
