[build-system]
requires = ["setuptools >= 72.0"]
build-backend = "setuptools.build_meta"

[project]
name = "danalyze"
dynamic = ["version"]
description = "danalyze - recursive differential analysis on files"
authors = [
  {name = "Sebastian Weigmann", email = "seb.weigmann@gmail.com"}
]
maintainers = [
  {name = "Sebastian Weigmann", email = "seb.weigmann@gmail.com"}
]
readme = "README.md"
license = {file = "LICENSE"}
dependencies = [
  #"ssdeep>=3.4.1"
  "ssdeep@git+https://github.com/DinoTools/python-ssdeep#egg=3.4.1"
]
requires-python = ">=3.8"

[tool.setuptools.dynamic]
version = {attr = "danalyze.danalyze.progver"}

[project.urls]
#Homepage = "https://example.com"
#Documentation = "https://readthedocs.org"
Repository = "https://github.com/sweigmann/danalyze.git"
#"Bug Tracker" = "https://github.com/me/spam/issues"
#Changelog = "https://github.com/sweigmann/danalyze/blob/main/CHANGELOG.md"

[project.scripts]
danalyze = "danalyze.danalyze:main"
